# ekf_exo_controller

./: .gitignore  AhrsManager.py  C_Wrapper.py  README.md  StatProfiler.py  ahrs_unit_test.py  analyze_subject.py  analyze_torque_sL_dependency.py  arctanMapFuncs.py  attitudeEstimatorEKFFuncs.py  attitude_ekf.py  bode_example.py  calibrateAngles.py  callibrate_angles_nls.py  ekf_torque_profile.py  gait_model.py  get_gyro_imu_biases.py  heelphase.py  mscl_example_get_current_config.py  mscl_example_parse_data.py  mscl_example_set_current_config.py  mscl_example_set_to_idle.py  mscl_example_start_sampling.py  overall_xsubj_ttest.py  pbekfexo_nls.py  phase_ekf.py  plot_acc_fft.py  plot_exo_data.py  plot_test_ahrs.py  sim_ekf.py  stance_detector.py  testPyEKFboost.py  test_ahrs.py  test_high_pass.py  test_standalone_EKF.py  treadmill_subj_stats.xlsx  treadmilll_data_latex.tgn  xsubject_data.xlsx
AB01/: OLD_analyze_AB01.py  OLD_processViconFilesTrial_AB01_BackwardTest03.py  OLD_processViconFilesTrial_AB01_ForwardTest02.py  OLD_processViconFilesTrial_AB01_TPVA_07.py  OLD_processViconFilesTrial_AB01_TPVB_06.py  OLD_processViconFilesTrial_AB01_TPVC_05.py  analyze_AB01.py
AB02/: analyze_AB02.py
AB03/: analyze_AB03.py  processViconFilesTrial_AB03_TPVA_01.py  processViconFilesTrial_AB03_TPVB_02.py  processViconFilesTrial_AB03_TPVC_03.py
AB04/: analyze_AB04.py
AB05/: analyze_AB05.py
AB06/: analyze_AB06.py  processViconFilesTrial_AB06_TPVA_01.py  processViconFilesTrial_AB06_TPVB_02.py
AB07/: analyze_AB07.py
AB08/: analyze_AB08.py
AB09/: analyze_AB09.py
AB10/: analyze_AB10.py
CLibrary/: README.md  setup.py
CLibrary/pyEKFboost/: AttitudeEKF.cpp  AttitudeEKF.hpp  AttitudeEKFWrapper.hpp  AttitudeEstimatorEKFFuncs.cpp  AttitudeEstimatorEKFFuncs.hpp  Bezier.cpp  Bezier.hpp  BoostedGaitModelWrapper.cpp  BoostedGaitModelWrapper.hpp  CBoostedEKF.cpp  CBoostedEKFWrapper.py  PyExt.cpp  PyExt.hpp  __init__.py
DataPort_Sim/: genDataPortCSVs.m  plot_crossval_results.py  sim_dataport_all.py  sim_dataport_crossval_all.py  sim_dataport_single.py  ttest_rampvnoramp.py
DataPort_Sim/CrossValidation/: genCrossVal_Covars.m  genCrossVal_gaitMappings.m  genCrossVal_gaitMappings.m~
GaitModel/: calculateLambdaPhaseRateStrideLength.m  exportGaitModel_fourier.m  exportLSCovar.m  exportLSMatrix_DataPort_3P_sL_incline.m  simulateLPFIntegration.m  testPlotInclines.m  testPlotSpeeds_i0.m
LeoExtensionDemo/cmake/: CMakeLists.txt
LeoExtensionDemo/include/: AttitudeEstimator.hpp  HumePoseKalmanFilter.hpp  IMUMessage.hpp  IMUReceiver.hpp  LowPassPositionFilter.hpp  MovingPoseEstimator.hpp  noEigenAttitudeEstimatorInterface.hpp
LeoExtensionDemo/python_ext/: README.md  setup.py
LeoExtensionDemo/python_ext/attitudeEstimator/: Announcer_Protocol.h  AttitudeEstimatorPyWrapper.cpp  AttitudeEstimatorPyWrapper.hpp  CppTests.cpp  Example.cpp  Example.hpp  IMUReceiverWrapper.cpp  IMUReceiverWrapper.hpp  IMU_Announcer.h  PyExt.cpp  PyExt.hpp  __init__.py  attitudeEstimatorWrapper.py  attitude_estimation_cpp.cpp
LeoExtensionDemo/python_ext/test/: demo.py
LeoExtensionDemo/src/: AttitudeEstimator.cpp  HumePoseKalmanFilter.cpp  IMUReceiver.cpp  LowPassPositionFilter.cpp  MovingPoseEstimator.cpp
LeoExtensionDemo/src/.deps/: AttitudeEstimator.Plo  Daemon.Plo  Daemon.Po  JoystickDriver.Po  JoystickReceiver.Plo  JoystickReporter.Po  PhaseSpaceUDPReceiver.Po  TestAttitudeEstimator.Po  joystick_udp.Po
LeoExtensionDemo/test/: LiveTest.cpp  LiveTest.hpp  TestAttitudeEstimator.cpp  TestAttitudeEstimator.hpp  TestNoEigen.hpp  TestWithVelocity.cpp  TestWithVelocity.hpp
Paper Plotting/: plotGaitModel.py  plotHeteroscedastic.py  plotJointAngles.py  plotMars_stills.py  plotPhaseRMSEComp_live.py  plotPhaseRMSEComp_xVal.py  plotTorqueProfile.py  plotWavefield_stills.py
Paper Plotting/Negative Ramp/: analyze_negative_ramp.py
Paper Plotting/Stride Length Discrepancy/: analyze_stride_length_discrepancy.py
StandaloneEKF/: atanMapFuncs.h  attitudeEstimatorEKFFuncs.h  attitude_ekf.cpp  build.sh  build_Att.sh  evalBezierFuncs_3P.h  evalFourierFuncs_3P.h  gaitModel.h  measurementNoiseModel.h  standalone-phase-ekf.cpp  standalone-phase-ekf.h  torqueProfile.h
Stress Test/Run 1/: analyze_wavefield.py  plot_wavefield.py
Stress Test/Run 2/Mars/: analyze_mars_6.py  plot_mars_6.py
Stress Test/Run 2/Wavefield/: analyze_wavefield_6.py  plot_wavefield_6.py
